PA3/tests/bad/bad_loop.cl
class Main {
	main() : Object {
		while 1 loop self pool
	};
};